--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,36 +1,36 @@
 <!-- Footer -->
-<footer class="uppercase px-8 sm:px-16">
+<footer class="bg-terracotta text-cream uppercase px-8 sm:px-16">
   <!-- order shifted on the newsletter to bring it above on mobile, but then needed to make the flex only on md, which meant we needed to add grid to the default/small size -->
   <div class="border-black py-16 grid gap-12 justify-center md:flex md:justify-between">
     <div class="flex gap-16">
       <div class="">
-        <p class="font-bold pb-4">Group name</p>
-        <a href="#" class="block">Link 1</a>
-        <a href="#" class="block">Link 2</a>
-        <a href="#" class="block">Link 3</a>
-        <a href="#" class="block">Link 4</a>
+        <p class="featured-text pb-4">Group name</p>
+        <a href="#" class="block text-sm">Link 1</a>
+        <a href="#" class="block text-sm">Link 2</a>
+        <a href="#" class="block text-sm">Link 3</a>
+        <a href="#" class="block text-sm">Link 4</a>
       </div>
       <div class="">
-        <p class="font-bold pb-4">Link groups</p>
-        <a href="#" class="block">Link 1</a>
-        <a href="#" class="block">Link 2</a>
-        <a href="#" class="block">Link 3</a>
-        <a href="#" class="block">Link 4</a>
+        <p class="featured-text pb-4">Link groups</p>
+        <a href="#" class="block text-sm">Link 1</a>
+        <a href="#" class="block text-sm">Link 2</a>
+        <a href="#" class="block text-sm">Link 3</a>
+        <a href="#" class="block text-sm">Link 4</a>
       </div>
       <div class="">
-          <p class="font-bold pb-4">Another group</p>
-          <a href="#" class="block">Link 1</a>
-          <a href="#" class="block">Link 2</a>
-          <a href="#" class="block">Link 3</a>
-          <a href="#" class="block">Link 4</a>
+          <p class="featured-text pb-4">Another group</p>
+          <a href="#" class="block text-sm">Link 1</a>
+          <a href="#" class="block text-sm">Link 2</a>
+          <a href="#" class="block text-sm">Link 3</a>
+          <a href="#" class="block text-sm">Link 4</a>
         </div>
     </div>
     <form class="flex flex-col order-first md:order-none">
-      <p>Subscribe to our newsletter</p>
+      <p class="featured-text uppercase text-right">Subscribe to our newsletter</p>
       <label class="sr-only" for="_replyto"> Email </label>
-      <input class="my-4 border-terracotta border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
+      <input class="px-10 my-4 border-cream border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
       <div>
-        <button type="submit" class="border border-terracotta uppercase text-xs px-6 p-2"> Subscribe </button>
+        <button type="submit" class="bg-cream text-terracotta uppercase px-6 p-2 "> Subscribe </button>
       </div>
     </form>
   </div>
