--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,18 @@
 <!-- Header -->
 <header class="relative min-h-screen flex flex-col">
-  <img class="absolute inset-0 w-full h-full object-cover -scale-y-100" src="https://images.unsplash.com/photo-1495476479092-6ece1898a101?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-  <nav class="relative p-2 flex justify-between">
-      <div>
-          <a href="#" class="p-4 uppercase text-sm">Link 1</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 2</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 3</a>
-      </div>
-      <div>
-          <a href="#" class="p-2 uppercase text-md">Logo</a> 
-      </div>
-      <div>
-          <a href="#" class="p-4 uppercase text-sm">Link 1</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 2</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 3</a>
-      </div>
+  <img class="absolute inset-0 w-full h-full object-cover" src="{{page.banner-image}}" alt="{{page.banner-image-alt}}">
+  <!-- Nav Bar -->
+  <nav class="relative flex flex-col md:flex-row justify-between p-4 px-8">
+    <div class="text-xl featured-text">The Yoga Studio</div>
+    <div class="content-center -mx-2">
+      <a href="#" class="p-4 uppercase text-sm tracking-wide">Our Classes</a>
+      <a href="#" class="p-4 uppercase text-sm tracking-wide">Schedule</a>
+      <a href="#" class="p-4 uppercase text-sm tracking-wide">Contact</a>
+    </div>
   </nav>
-  <div class="relative text-center grow flex flex-col justify-center">
-      <p>{{page.overline}}</p>
-      <h1 class="text-5xl uppercase ">{{page.main-heading}}</h1>
+  <div class="relative grow flex flex-col justify-center p-24">
+    <hr class="border-terracotta -ml-24 w-1/3">
+    <p class="pt-10 uppercase accent-text tracking-widest">{{page.overline}}</p>
+    <h1 class="text-7xl featured-text">{{page.main-heading}}</h1>
   </div>
 </header>
