image and four text grid created

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,24 +5,24 @@
     <div class="flex gap-16">
       <div class="">
         <p class="featured-text pb-4">Group name</p>
-        <a href="#" class="block text-sm">Link 1</a>
-        <a href="#" class="block text-sm">Link 2</a>
-        <a href="#" class="block text-sm">Link 3</a>
-        <a href="#" class="block text-sm">Link 4</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 1</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 2</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 3</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 4</a>
       </div>
       <div class="">
         <p class="featured-text pb-4">Link groups</p>
-        <a href="#" class="block text-sm">Link 1</a>
-        <a href="#" class="block text-sm">Link 2</a>
-        <a href="#" class="block text-sm">Link 3</a>
-        <a href="#" class="block text-sm">Link 4</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 1</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 2</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 3</a>
+        <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 4</a>
       </div>
       <div class="">
           <p class="featured-text pb-4">Another group</p>
-          <a href="#" class="block text-sm">Link 1</a>
-          <a href="#" class="block text-sm">Link 2</a>
-          <a href="#" class="block text-sm">Link 3</a>
-          <a href="#" class="block text-sm">Link 4</a>
+          <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 1</a>
+          <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 2</a>
+          <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 3</a>
+          <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 4</a>
         </div>
     </div>
     <form class="flex flex-col order-first md:order-none">
@@ -34,4 +34,10 @@
       </div>
     </form>
   </div>
+  
 </footer>
+
+<div class="bg-terracotta text-cream">
+  <hr class="relative border-cream border-t-1">
+  <p class="px-8 sm:px-16 py-4 uppercase text-sm tracking-wide border-cream border-t-1">Terms of use</p>
+</div>
