index mostly done, our classes started

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <img class="absolute inset-0 w-full h-full object-cover" src="{{page.banner-image}}" alt="{{page.banner-image-alt}}">
   <!-- Nav Bar -->
   <nav class="relative flex flex-col md:flex-row justify-between p-4 px-8">
-    <div class="text-xl featured-text">The Yoga Studio</div>
+    <a href="/index.html" class="text-xl featured-text">The Yoga Studio</a>
     <div class="content-center -mx-2">
-      <a href="#" class="p-4 uppercase text-sm tracking-wide">Our Classes</a>
+      <a href="/our-classes.html" class="p-4 uppercase text-sm tracking-wide">Our Classes</a>
       <a href="#" class="p-4 uppercase text-sm tracking-wide">Schedule</a>
       <a href="#" class="p-4 uppercase text-sm tracking-wide">Contact</a>
     </div>
