--- a/_includes/large-image-and-multi-text-grid.html
+++ b/_includes/large-image-and-multi-text-grid.html
@@ -1,4 +1,5 @@
 <section class=" grid grid-cols-4 min-h-screen divide-x divide-y divide-terracotta">
+  
   <div class="relative flex col-span-2 row-span-2">
     <img class="absolute inset-0 object-cover w-full h-full object-top" style="object-position: 50% 25%;" src="{{block.image}}" alt="{{block.alt}}">
     <div class="relative p-8 sm:p-16 col-span-2 text-white pr-12 self-end">
@@ -11,13 +12,14 @@
       </div>
     </div>
   </div>
-  <div>
-    <h3 class="-my-px featured-text">Bikram hot yoga</h3>
-    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quo, dolor error corporis.</p>
-  </div>
 
-  <div class="-my-px">Bikram hot yoga</div>
-  <div class="-my-px">Bikram hot yoga</div>
-  <div class="-my-px">Bikram hot yoga</div>
+  {% for item in block.text-loop %}
+  <div class="-my-px p-6 flex">
+    <div class="self-end">
+      <h3 class="featured-text text-4xl pb-2">{{item.heading}}</h3>
+      <p class="">{{item.text}}</p>
+    </div>
+  </div>
+  {% endfor %}
 
 </section>
