--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,6 +531,9 @@ video {
 .grid {
     display: grid;
 }
+.aspect-square {
+    aspect-ratio: 1 / 1;
+}
 .h-full {
     height: 100%;
 }
@@ -663,6 +666,12 @@ video {
 .p-8 {
     padding: 2rem;
 }
+.p-6 {
+    padding: 1.5rem;
+}
+.p-16 {
+    padding: 4rem;
+}
 .px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -691,6 +700,14 @@ video {
     padding-top: 8rem;
     padding-bottom: 8rem;
 }
+.py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+.py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+}
 .pb-4 {
     padding-bottom: 1rem;
 }
@@ -714,6 +731,15 @@ video {
 }
 .pb-8 {
     padding-bottom: 2rem;
+}
+.pb-2 {
+    padding-bottom: 0.5rem;
+}
+.pt-4 {
+    padding-top: 1rem;
+}
+.text-center {
+    text-align: center;
 }
 .text-right {
     text-align: right;
@@ -744,6 +770,10 @@ video {
 .text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+}
+.text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
 }
 .font-bold {
     font-weight: 700;
@@ -783,6 +813,9 @@ body {
 .featured-text { font-family: "Oranienbaum", serif;}
 .accent-text { font-family: "Poppins", sans-serif;}
 @media (min-width: 640px) {
+    .sm\:grid-cols-3 {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
     .sm\:p-16 {
         padding: 4rem;
     }
