fixed some details, started the schedule page
fixed the padding/margin on the border cards by adding another div

fixed the newsletter submit button by adding text-right to the div

made the option for full or 2/3 photo on the header with if statement

made the positioning possible with inline style and liquid tags

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,8 +29,8 @@
       <p class="featured-text uppercase text-right">Subscribe to our newsletter</p>
       <label class="sr-only" for="_replyto"> Email </label>
       <input class="px-10 my-4 border-cream border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
-      <div>
-        <button type="submit" class="bg-cream text-terracotta uppercase px-6 p-2 "> Subscribe </button>
+      <div class="text-right">
+        <button type="submit" class="bg-cream text-terracotta uppercase px-6 p-2"> Subscribe </button>
       </div>
     </form>
   </div>
