need to still fix the contact page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,11 +7,11 @@
     <div class="content-center -mx-2">
       <a href="/our-classes.html" class="p-4 uppercase text-sm tracking-wide">Our Classes</a>
       <a href="/schedule.html" class="p-4 uppercase text-sm tracking-wide">Schedule</a>
-      <a href="#" class="p-4 uppercase text-sm tracking-wide">Contact</a>
+      <a href="/contact.html" class="p-4 uppercase text-sm tracking-wide">Contact</a>
     </div>
   </nav>
   <div class="relative grow flex flex-col justify-center p-24">
-    <hr class="border-terracotta -ml-24 w-1/3">
+    <hr class="border-terracotta -ml-24 w-80">
     <p class="pt-10 uppercase accent-text tracking-widest">{{page.banner.overline}}</p>
     <h1 class="text-7xl featured-text">{{page.banner.main-heading}}</h1>
   </div>
