--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -569,6 +569,15 @@ video {
 .w-\[70vw\] {
     width: 70vw;
 }
+.w-80 {
+    width: 20rem;
+}
+.w-\[30vh\] {
+    width: 30vh;
+}
+.w-\[70vh\] {
+    width: 70vh;
+}
 .grow {
     flex-grow: 1;
 }
@@ -577,6 +586,9 @@ video {
 }
 .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.flex-row {
+    flex-direction: row;
 }
 .flex-col {
     flex-direction: column;
@@ -625,9 +637,15 @@ video {
 .border {
     border-width: 1px;
 }
+.border-2 {
+    border-width: 2px;
+}
 .border-y {
     border-top-width: 1px;
     border-bottom-width: 1px;
+}
+.border-b-2 {
+    border-bottom-width: 2px;
 }
 .border-black {
     --tw-border-opacity: 1;
@@ -728,6 +746,10 @@ video {
     padding-top: 6rem;
     padding-bottom: 6rem;
 }
+.py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
 .pb-4 {
     padding-bottom: 1rem;
 }
@@ -758,6 +780,15 @@ video {
 .pt-4 {
     padding-top: 1rem;
 }
+.pb-12 {
+    padding-bottom: 3rem;
+}
+.pb-6 {
+    padding-bottom: 1.5rem;
+}
+.pt-2 {
+    padding-top: 0.5rem;
+}
 .text-center {
     text-align: center;
 }
@@ -766,6 +797,9 @@ video {
 }
 .align-bottom {
     vertical-align: bottom;
+}
+.font-sans {
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .text-7xl {
     font-size: 4.5rem;
@@ -795,8 +829,15 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
 }
+.text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+}
 .font-bold {
     font-weight: 700;
+}
+.font-extrabold {
+    font-weight: 800;
 }
 .uppercase {
     text-transform: uppercase;
@@ -862,5 +903,11 @@ body {
     }
     .md\:justify-between {
         justify-content: space-between;
+    }
+    .md\:pr-12 {
+        padding-right: 3rem;
+    }
+    .md\:pt-0 {
+        padding-top: 0px;
     }
 }
