--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
       <label class="sr-only" for="_replyto"> Email </label>
       <input class="px-10 my-4 border-cream border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
       <div class="text-right">
-        <button type="submit" class="bg-cream text-terracotta uppercase px-6 p-2"> Subscribe </button>
+        <button type="submit" class="bg-cream text-terracotta uppercase px-6 p-2 hover:bg-sandy"> Subscribe </button>
       </div>
     </form>
   </div>
