--- a/_includes/text-and-image-grid.html
+++ b/_includes/text-and-image-grid.html
@@ -8,7 +8,7 @@
     <p class="pb-3">{{block.text-1}}</p>
     <p class="pb-3">{{block.text-2}}</p>
     <div class="pt-6">
-      <button class="bg-terracotta text-cream uppercase text-xs px-6 p-2">{{block.button-text}}</button>
+      <button class="bg-terracotta text-cream uppercase text-xs px-6 p-2 border-terracotta border transition hover:bg-sandy hover:text-terracotta">{{block.button-text}}</button>
     </div>
   </div>
   <!-- md:h-full on the div negates the h-72, h-full on the image is still needed because of the position absolute -->
