--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,34 +437,6 @@ video {
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
-.container {
-    width: 100%;
-}
-@media (min-width: 640px) {
-    .container {
-        max-width: 640px;
-    }
-}
-@media (min-width: 768px) {
-    .container {
-        max-width: 768px;
-    }
-}
-@media (min-width: 1024px) {
-    .container {
-        max-width: 1024px;
-    }
-}
-@media (min-width: 1280px) {
-    .container {
-        max-width: 1280px;
-    }
-}
-@media (min-width: 1536px) {
-    .container {
-        max-width: 1536px;
-    }
-}
 .sr-only {
     position: absolute;
     width: 1px;
@@ -485,13 +457,13 @@ video {
 .inset-0 {
     inset: 0px;
 }
-.inset-y-0 {
-    top: 0px;
-    bottom: 0px;
-}
 .inset-x-0 {
     left: 0px;
     right: 0px;
+}
+.inset-y-0 {
+    top: 0px;
+    bottom: 0px;
 }
 .left-\[30vw\] {
     left: 30vw;
@@ -511,30 +483,17 @@ video {
 .row-span-2 {
     grid-row: span 2 / span 2;
 }
-.-m-24 {
-    margin: -6rem;
-}
-.-m-px {
-    margin: -1px;
-}
-.m-4 {
-    margin: 1rem;
-}
 .-mx-2 {
     margin-left: -0.5rem;
     margin-right: -0.5rem;
 }
-.my-4 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-.mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-}
 .-my-px {
     margin-top: -1px;
     margin-bottom: -1px;
+}
+.my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .-ml-24 {
     margin-left: -6rem;
@@ -551,44 +510,29 @@ video {
 .aspect-square {
     aspect-ratio: 1 / 1;
 }
-.h-full {
-    height: 100%;
-}
 .h-72 {
     height: 18rem;
+}
+.h-full {
+    height: 100%;
 }
 .min-h-screen {
     min-height: 100vh;
 }
-.w-1\/3 {
-    width: 33.333333%;
-}
-.w-full {
-    width: 100%;
+.w-80 {
+    width: 20rem;
 }
 .w-\[70vw\] {
     width: 70vw;
 }
-.w-80 {
-    width: 20rem;
-}
-.w-\[30vh\] {
-    width: 30vh;
-}
-.w-\[70vh\] {
-    width: 70vh;
+.w-full {
+    width: 100%;
 }
 .grow {
     flex-grow: 1;
 }
-.origin-right {
-    transform-origin: right;
-}
 .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.flex-row {
-    flex-direction: row;
 }
 .flex-col {
     flex-direction: column;
@@ -596,17 +540,11 @@ video {
 .content-center {
     align-content: center;
 }
-.justify-end {
-    justify-content: flex-end;
-}
 .justify-center {
     justify-content: center;
 }
 .justify-between {
     justify-content: space-between;
-}
-.justify-items-end {
-    justify-items: end;
 }
 .gap-12 {
     gap: 3rem;
@@ -637,27 +575,24 @@ video {
 .border {
     border-width: 1px;
 }
-.border-2 {
-    border-width: 2px;
-}
 .border-y {
     border-top-width: 1px;
     border-bottom-width: 1px;
 }
-.border-b-2 {
-    border-bottom-width: 2px;
+.border-b {
+    border-bottom-width: 1px;
 }
 .border-black {
     --tw-border-opacity: 1;
     border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
-.border-terracotta {
-    --tw-border-opacity: 1;
-    border-color: rgb(201 115 36 / var(--tw-border-opacity));
-}
 .border-cream {
     --tw-border-opacity: 1;
     border-color: rgb(251 242 233 / var(--tw-border-opacity));
+}
+.border-terracotta {
+    --tw-border-opacity: 1;
+    border-color: rgb(201 115 36 / var(--tw-border-opacity));
 }
 .bg-cream {
     --tw-bg-opacity: 1;
@@ -670,16 +605,9 @@ video {
     --tw-bg-opacity: 1;
     background-color: rgb(201 115 36 / var(--tw-bg-opacity));
 }
-.bg-center {
-    background-position: center;
-}
 .object-cover {
     -o-object-fit: cover;
        object-fit: cover;
-}
-.object-bottom {
-    -o-object-position: bottom;
-       object-position: bottom;
 }
 .object-center {
     -o-object-position: center;
@@ -688,6 +616,12 @@ video {
 .object-top {
     -o-object-position: top;
        object-position: top;
+}
+.p-1 {
+    padding: 0.25rem;
+}
+.p-16 {
+    padding: 4rem;
 }
 .p-2 {
     padding: 0.5rem;
@@ -698,17 +632,15 @@ video {
 .p-4 {
     padding: 1rem;
 }
-.p-1 {
-    padding: 0.25rem;
+.p-6 {
+    padding: 1.5rem;
 }
 .p-8 {
     padding: 2rem;
 }
-.p-6 {
-    padding: 1.5rem;
-}
-.p-16 {
-    padding: 4rem;
+.px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
 }
 .px-6 {
     padding-left: 1.5rem;
@@ -722,22 +654,6 @@ video {
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
-.py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-}
-.px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-}
-.py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-.py-32 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-}
 .py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -746,48 +662,40 @@ video {
     padding-top: 6rem;
     padding-bottom: 6rem;
 }
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
 .py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
-.pb-4 {
-    padding-bottom: 1rem;
-}
-.pt-16 {
-    padding-top: 4rem;
-}
-.pt-10 {
-    padding-top: 2.5rem;
+.pb-2 {
+    padding-bottom: 0.5rem;
 }
 .pb-3 {
     padding-bottom: 0.75rem;
 }
-.pr-12 {
-    padding-right: 3rem;
-}
-.pt-8 {
-    padding-top: 2rem;
-}
-.pt-6 {
-    padding-top: 1.5rem;
-}
-.pb-8 {
-    padding-bottom: 2rem;
-}
-.pb-2 {
-    padding-bottom: 0.5rem;
-}
-.pt-4 {
-    padding-top: 1rem;
-}
-.pb-12 {
-    padding-bottom: 3rem;
+.pb-4 {
+    padding-bottom: 1rem;
 }
 .pb-6 {
     padding-bottom: 1.5rem;
 }
+.pb-8 {
+    padding-bottom: 2rem;
+}
+.pr-12 {
+    padding-right: 3rem;
+}
+.pt-10 {
+    padding-top: 2.5rem;
+}
 .pt-2 {
     padding-top: 0.5rem;
+}
+.pt-6 {
+    padding-top: 1.5rem;
 }
 .text-center {
     text-align: center;
@@ -795,11 +703,13 @@ video {
 .text-right {
     text-align: right;
 }
-.align-bottom {
-    vertical-align: bottom;
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
 }
-.font-sans {
-    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
 }
 .text-7xl {
     font-size: 4.5rem;
@@ -817,27 +727,8 @@ video {
     font-size: 0.75rem;
     line-height: 1rem;
 }
-.text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-}
-.text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-}
-.text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-}
-.text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-}
-.font-bold {
-    font-weight: 700;
-}
-.font-extrabold {
-    font-weight: 800;
+.font-semibold {
+    font-weight: 600;
 }
 .uppercase {
     text-transform: uppercase;
@@ -863,6 +754,17 @@ video {
 .overline {
     text-decoration-line: overline;
 }
+.outline-none {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+.transition {
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
 
 /* Custom CSS */
 
@@ -873,6 +775,48 @@ body {
 
 .featured-text { font-family: "Oranienbaum", serif;}
 .accent-text { font-family: "Poppins", sans-serif;}
+.placeholder\:pl-0::-moz-placeholder {
+    padding-left: 0px;
+}
+.placeholder\:pl-0::placeholder {
+    padding-left: 0px;
+}
+.placeholder\:uppercase::-moz-placeholder {
+    text-transform: uppercase;
+}
+.placeholder\:uppercase::placeholder {
+    text-transform: uppercase;
+}
+.placeholder\:text-terracotta::-moz-placeholder {
+    --tw-text-opacity: 1;
+    color: rgb(201 115 36 / var(--tw-text-opacity));
+}
+.placeholder\:text-terracotta::placeholder {
+    --tw-text-opacity: 1;
+    color: rgb(201 115 36 / var(--tw-text-opacity));
+}
+.hover\:border:hover {
+    border-width: 1px;
+}
+.hover\:border-terracotta:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(201 115 36 / var(--tw-border-opacity));
+}
+.hover\:bg-sandy:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(246 226 206 / var(--tw-bg-opacity));
+}
+.hover\:text-terracotta:hover {
+    --tw-text-opacity: 1;
+    color: rgb(201 115 36 / var(--tw-text-opacity));
+}
+.focus\:border-none:focus {
+    border-style: none;
+}
+.focus\:bg-sandy:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgb(246 226 206 / var(--tw-bg-opacity));
+}
 @media (min-width: 640px) {
     .sm\:grid-cols-3 {
         grid-template-columns: repeat(3, minmax(0, 1fr));
