--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,5 +1,5 @@
 <section class="border-y border-terracotta">
-  <div class="w-[70vw]">
+  <div class="relative left-[30vw] w-[70vw] ">
     <form class="p-8 px-8 sm:px-16 flex flex-col md:pr-12">
       <!-- Name -->
       <div class="py-6 md:pt-0">
