--- a/_includes/large-image-and-multi-text-grid.html
+++ b/_includes/large-image-and-multi-text-grid.html
@@ -1,6 +1,6 @@
 <section class=" grid grid-cols-4 min-h-screen divide-x divide-y divide-terracotta">
   
-  <div class="relative flex col-span-2 row-span-2">
+  <div class="relative flex col-span-4 md:col-span-2 row-span-4 md:row-span-2">
     <img class="absolute inset-0 object-cover w-full h-full object-top" style="object-position: 50% 25%;" src="{{block.image}}" alt="{{block.alt}}">
     <div class="relative p-8 sm:p-16 col-span-2 text-white pr-12 self-end">
       <div>
@@ -14,7 +14,7 @@
   </div>
 
   {% for item in block.text-loop %}
-  <div class="-my-px p-6 flex">
+  <div class="col-span-2 sm:col-span-1 -my-px p-6 flex">
     <div class="self-end">
       <h3 class="featured-text text-4xl pb-2">{{item.heading}}</h3>
       <p class="">{{item.text}}</p>
