--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,8 +480,14 @@ video {
 .col-span-2 {
     grid-column: span 2 / span 2;
 }
+.col-span-4 {
+    grid-column: span 4 / span 4;
+}
 .row-span-2 {
     grid-row: span 2 / span 2;
+}
+.row-span-4 {
+    grid-row: span 4 / span 4;
 }
 .-mx-2 {
     margin-left: -0.5rem;
@@ -691,9 +697,6 @@ video {
 .pt-10 {
     padding-top: 2.5rem;
 }
-.pt-2 {
-    padding-top: 0.5rem;
-}
 .pt-6 {
     padding-top: 1.5rem;
 }
@@ -775,12 +778,6 @@ body {
 
 .featured-text { font-family: "Oranienbaum", serif;}
 .accent-text { font-family: "Poppins", sans-serif;}
-.placeholder\:pl-0::-moz-placeholder {
-    padding-left: 0px;
-}
-.placeholder\:pl-0::placeholder {
-    padding-left: 0px;
-}
 .placeholder\:uppercase::-moz-placeholder {
     text-transform: uppercase;
 }
@@ -795,13 +792,6 @@ body {
     --tw-text-opacity: 1;
     color: rgb(201 115 36 / var(--tw-text-opacity));
 }
-.hover\:border:hover {
-    border-width: 1px;
-}
-.hover\:border-terracotta:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(201 115 36 / var(--tw-border-opacity));
-}
 .hover\:bg-sandy:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(246 226 206 / var(--tw-bg-opacity));
@@ -810,14 +800,26 @@ body {
     --tw-text-opacity: 1;
     color: rgb(201 115 36 / var(--tw-text-opacity));
 }
-.focus\:border-none:focus {
-    border-style: none;
-}
 .focus\:bg-sandy:focus {
     --tw-bg-opacity: 1;
     background-color: rgb(246 226 206 / var(--tw-bg-opacity));
 }
 @media (min-width: 640px) {
+    .sm\:left-\[30vw\] {
+        left: 30vw;
+    }
+    .sm\:col-span-2 {
+        grid-column: span 2 / span 2;
+    }
+    .sm\:col-span-1 {
+        grid-column: span 1 / span 1;
+    }
+    .sm\:row-span-2 {
+        grid-row: span 2 / span 2;
+    }
+    .sm\:w-\[70vw\] {
+        width: 70vw;
+    }
     .sm\:grid-cols-3 {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
@@ -832,6 +834,18 @@ body {
 @media (min-width: 768px) {
     .md\:order-none {
         order: 0;
+    }
+    .md\:col-span-4 {
+        grid-column: span 4 / span 4;
+    }
+    .md\:col-span-2 {
+        grid-column: span 2 / span 2;
+    }
+    .md\:row-span-4 {
+        grid-row: span 4 / span 4;
+    }
+    .md\:row-span-2 {
+        grid-row: span 2 / span 2;
     }
     .md\:flex {
         display: flex;
