updating colors in data file and across the site

--- a/_includes/cards-with-border-section.html
+++ b/_includes/cards-with-border-section.html
@@ -1,20 +1,20 @@
 <!-- Cards with Border Section -->
-<section class="p-16 py-24 border-y border-terracotta">
+<section class="p-16 py-24 border-y border-featured">
   <div class="grid sm:grid-cols-3 gap-6 pt-6">
 
     {% for item in block.card-loop %}
 
       <!-- Card Loop -->
-      <div class="border border-terracotta">
+      <div class="border border-featured">
         <div class="text-center">
           <div class="p-4">
-            <img class="aspect-square  border border-terracotta object-cover w-full" src="{{item.image}}" alt="{{item.alt}}">
+            <img class="aspect-square  border border-featured object-cover w-full" src="{{item.image}}" alt="{{item.alt}}">
           </div>
           <div class="p-4">
             <h3 class="featured-text py-4 text-2xl">{{item.heading}}</h3>
-            <hr class="border-terracotta border-1">
+            <hr class="border-featured border-1">
             <p class="p-4 pt-6">{{item.text}}</p>
-            <button type="submit" class="bg-terracotta text-white uppercase text-xs px-6 py-2 border-terracotta border transition hover:bg-sandy hover:text-terracotta"> {{item.button-text}} </button>
+            <button type="submit" class="button"> {{item.button-text}} </button>
           </div>
         </div>
       </div>
