--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-terracotta text-cream uppercase px-8 sm:px-16">
+<footer class="bg-featured text-base uppercase px-8 sm:px-16">
   <!-- order shifted on the newsletter to bring it above on mobile, but then needed to make the flex only on md, which meant we needed to add grid to the default/small size -->
   <div class="border-black py-16 grid gap-12 justify-center md:flex md:justify-between">
     <div class="flex gap-16">
@@ -28,16 +28,16 @@
     <form class="flex flex-col order-first md:order-none">
       <p class="featured-text uppercase text-right">Subscribe to our newsletter</p>
       <label class="sr-only" for="_replyto"> Email </label>
-      <input class="px-10 my-4 border-cream border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
+      <input class="px-10 my-4 border-base border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
       <div class="text-right">
-        <button type="submit" class="bg-cream text-terracotta uppercase px-6 p-2 hover:bg-sandy"> Subscribe </button>
+        <button type="submit" class="bg-base text-featured uppercase px-6 p-2 hover:bg-sandy"> Subscribe </button>
       </div>
     </form>
   </div>
   
 </footer>
 
-<div class="bg-terracotta text-cream">
-  <hr class="relative border-cream border-t-1">
-  <p class="px-8 sm:px-16 py-4 uppercase text-sm tracking-wide border-cream border-t-1">Terms of use</p>
+<div class="bg-featured text-base">
+  <hr class="relative border-base border-t-1">
+  <p class="px-8 sm:px-16 py-4 uppercase text-sm tracking-wide border-base border-t-1">Terms of use</p>
 </div>
