--- a/_includes/large-image-and-multi-text-grid.html
+++ b/_includes/large-image-and-multi-text-grid.html
@@ -1,4 +1,4 @@
-<section class=" grid grid-cols-4 min-h-screen divide-x divide-y divide-terracotta">
+<section class=" grid grid-cols-4 min-h-screen divide-x divide-y divide-featured">
   
   <div class="relative flex col-span-4 md:col-span-2 row-span-4 md:row-span-2">
     <img class="absolute inset-0 object-cover w-full h-full object-top" style="object-position: 50% 25%;" src="{{block.image}}" alt="{{block.alt}}">
@@ -8,7 +8,7 @@
       </div>
       <p class="pb-3">{{block.text}}</p>
       <div class="pt-6">
-        <button class="bg-terracotta uppercase text-xs px-6 p-2">{{block.button-text}}</button>
+        <button class="bg-featured uppercase text-xs px-6 p-2">{{block.button-text}}</button>
       </div>
     </div>
   </div>
