--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,15 @@
 <!-- Head -->
 {% include site-head.html %}
 
-<body class="bg-cream text-terracotta">
+   <style>
+         :root {
+            --featured-color: {{site.data.style.featured-color}};
+            --accent-color: {{site.data.style.accent-color}};
+            --base-color: {{site.data.style.base-color}};
+         }
+   </style>
+
+<body class="bg-base text-featured">
 
  <!-- Header -->
  {% include header.html %}
