--- a/_includes/cards-section.html
+++ b/_includes/cards-section.html
@@ -1,5 +1,5 @@
 <!-- Cards Section -->
-<section class="p-16 py-24 border-y border-terracotta">
+<section class="p-16 py-24 border-y border-featured">
   <h2 class="uppercase text-2xl">{{block.main-heading}}</h2>
   <div class="grid sm:grid-cols-3 gap-6 pt-6">
 
@@ -7,9 +7,9 @@
 
       <!-- Card Loop -->
       <div class="text-center">
-          <img class="aspect-square border border-terracotta object-cover w-full" src="{{item.image}}" alt="{{item.alt}}">
+          <img class="aspect-square border border-featured object-cover w-full" src="{{item.image}}" alt="{{item.alt}}">
           <h3 class="featured-text py-4 text-2xl">{{item.heading}}</h3>
-          <hr class="border-terracotta border-1">
+          <hr class="border-featured border-1">
           <p class="pt-6">{{item.text}}</p>
       </div>
     
