--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     </div>
   </nav>
   <div class="relative grow flex flex-col justify-center p-24">
-    <hr class="border-terracotta -ml-24 w-80">
+    <hr class="border-featured -ml-24 w-80">
     <p class="pt-10 uppercase accent-text tracking-widest">{{page.banner.overline}}</p>
     <h1 class="text-7xl featured-text">{{page.banner.main-heading}}</h1>
   </div>
