--- a/style.css
+++ b/style.css
@@ -17,3 +17,20 @@ body {
 
 .featured-text { font-family: "Oranienbaum", serif;}
 .accent-text { font-family: "Poppins", sans-serif;}
+
+/* Reuseable Group Styles */
+.button {
+    background-color: var(--featured-color);
+    color: white;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    padding: 0.5rem 1.5rem;
+    border: 1px var(--featured-color);
+    transition: all 150ms;
+}
+
+.button:hover {
+    background-color: var(--accent-color);
+    color: var(--featured-color);
+    border: 1px var(--featured-color);
+}
