testing site for any color bugs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,9 +28,9 @@
     <form class="flex flex-col order-first md:order-none">
       <p class="featured-text uppercase text-right">Subscribe to our newsletter</p>
       <label class="sr-only" for="_replyto"> Email </label>
-      <input class="px-10 my-4 border-base border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
+      <input class="focus:outline-none pl-2 pr-10 my-4 py-1 border-base border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
       <div class="text-right">
-        <button type="submit" class="bg-base text-featured uppercase px-6 p-2 hover:bg-sandy"> Subscribe </button>
+        <button type="submit" class="bg-base text-featured uppercase px-6 p-2 hover:bg-accent"> Subscribe </button>
       </div>
     </form>
   </div>
