--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,8 +531,14 @@ video {
 .w-full {
     width: 100%;
 }
+.shrink-0 {
+    flex-shrink: 0;
+}
 .grow {
     flex-grow: 1;
+}
+.basis-\[30\%\] {
+    flex-basis: 30%;
 }
 .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -573,6 +579,9 @@ video {
 }
 .self-end {
     align-self: flex-end;
+}
+.overflow-x-auto {
+    overflow-x: auto;
 }
 .border {
     border-width: 1px;
