--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .accent-text { font-family: "Poppins", sans-serif;}
 
 /* Reuseable Group Styles */
-body .button {
+.button {
     background-color: var(--featured-color);
     color: var(--base-color);
     text-transform: uppercase;
@@ -27,9 +27,10 @@ body .button {
     padding: 0.5rem 1.5rem;
     border: 1px solid var(--featured-color);
     transition: all 150ms;
+    display: inline-block;
 }
 
-body .button:hover {
+.button:hover {
     background-color: var(--accent-color);
     color: var(--featured-color);
 }
