added data files for classes and testimonials
this makes it dynamic for when you're adding info in one place but goes to mulitple places

--- a/_includes/large-image-and-multi-text-grid.html
+++ b/_includes/large-image-and-multi-text-grid.html
@@ -8,7 +8,7 @@
       </div>
       <p class="pb-3">{{block.text}}</p>
       <div class="pt-6">
-        <button class="bg-featured uppercase text-xs px-6 p-2">{{block.button-text}}</button>
+        <a href="{{block.button-link}}" class="button">{{block.button-text}}</a>
       </div>
     </div>
   </div>
