--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,6 +864,9 @@ footer a:hover {
     .md\:col-span-2 {
         grid-column: span 2 / span 2;
     }
+    .md\:col-span-1 {
+        grid-column: span 1 / span 1;
+    }
     .md\:row-span-2 {
         grid-row: span 2 / span 2;
     }
